fixing grey message and spacing
git-svn-id: https://svn.penske.com/svn/ecomm/webprojects/suppliermgmt/suppliermgmt/branches/dev@77345 1dbbddac-570e-0410-aece-e783461d2649

--- a/WebContent/css/admin-console/oem-build-matrix/production-slot-results.css
+++ b/WebContent/css/admin-console/oem-build-matrix/production-slot-results.css
@@ -52,6 +52,11 @@ color: #FFFFFF !important;
 .formLbl {
 	font-weight: bold;
 }
+
+#errorMessage {
+	margin-bottom: 10px;
+}
+
 #update-reservation-table{
 	width: 100%;
 }
